--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -2871,7 +2871,7 @@
                                                 <button  type="submit" mat-raised-button color="primary">
                                                     Search
                                                 </button>
-                                                <button type="button" class="me-3 ms-3" mat-raised-button color="warn">
+                                                <button type="button" class="me-3 ms-3" mat-raised-button color="warn" (click)="fof.resetForm()">
                                                     Reset
                                                 </button>
                                                 <button type="button" mat-raised-button color="warn" (click)="ConvartBill()">
@@ -2883,10 +2883,10 @@
                                     </form>
                                     <!-- Purchase Detailed list -->
                                     <div class="body p-2">
-                                        <div id="ProductExpiry-content" class="col-sm-12"
+                                        <div id="SaleM-content" class="col-sm-12"
                                             style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
-                                                style="border: 2px solid #fff !important;" id="saleExpiryExcel">
+                                                style="border: 2px solid #fff !important;" id="saleExcelM">
                                                 <thead>
                                                     <tr class="text-center" style="white-space: normal;">
                                                         <th><mat-checkbox  class="example-margin" color="primary"
@@ -2894,8 +2894,9 @@
                                                         </mat-checkbox>
                                                             SNo. 
                                                         </th>
-                                                        <th >InvoiceDate</th>
-                                                        <th >InvoiceNo</th>
+                                                        <th >OrderDate</th>
+                                                        <th >DeliveryDate</th>
+                                                        <th >OrderNo</th>
                                                         <th >CustomerName</th>
                                                         <th >MobileNo</th>
                                                         <th style="display: none;">Reg No.</th>
@@ -2921,33 +2922,49 @@
                                                         <th >Cust_GSTNo</th>
                                                         <th >ShopName</th>
                                                     </tr>
-                                                    <tr class="totolRow" *ngIf="this.ManualList != null && this.ManualList != ''">
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        <td></td>
-                                                        
-                                                       
+                                                    <tr class="totolRow">
+                                                        <td style="white-space: nowrap;">
+                                                            <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                                aria-hidden="true" type="button"
+                                                                (click)="exportAsXLSXMasterM()">
+                                                            </i>
+                                                            <button class="bg_none ms-4 me-2"
+                                                                (click)="print('SaleM-content')">
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;">
+                                                                </i>
+                                                            </button>
+                                                        </td>
+                                                        <td ></td>
+                                                        <td ></td>
+                                                        <td ></td>
+                                                        <td ></td>
+                                                        <td ></td>
+                                                        <td style="display: none;"></td>
+                                                        <td style="display: none;"></td>
+                                                        <td style="display: none;"></td>
+                                                        <td ></td>
+                                                        <td >{{this.totalQtyM}}</td>
+                                                        <td >{{this.totalDiscountM}}
+                                                        </td>
+                                                        <td >{{this.totalUnitPriceM}}
+                                                        </td>
+                                                        <!-- <td *ngIf="columnVisibility.TAXType"></td> -->
+                                                        <td >{{this.totalGstAmount}}
+                                                        </td>
+                                                        <td *ngIf="companySetting.CompanyCurrency === 'INR' "></td>
+                                                        <td *ngIf="companySetting.CompanyCurrency === 'INR' "></td>
+                                                        <td *ngIf="companySetting.CompanyCurrency === 'INR' "></td>
+                                                        <td >{{this.totalAmountM}}
+                                                        </td>
+                                                        <td >{{this.totalAddlDiscountM}}</td>
+                                                        <td >{{this.totalPaidM}}</td>
+                                                        <td >{{this.totalBalanceM}}</td>
+                                                        <td ></td>
+                                                        <td ></td>
+                                                        <td ></td>
+                                                        <td ></td>
+
                                                     </tr>
                                                 </thead>
                                                 <tbody class="text-center">
@@ -2958,7 +2975,8 @@
                                                             (click)="validate(d, $event)" name="feature{{d.ID}}"
                                                             value="{{d.Sel}}" style="width: 20px; height: 16px;  z-index: 999 !important;
                                                             position: relative !important; "> {{i+1}} </td>
-                                                        <td >{{dateFormat(d.BillDate)}}</td>
+                                                        <td >{{dateFormat(d.OrderDate)}}</td>
+                                                        <td >{{dateFormat(d.DeliveryDate)}}</td>
                                                            <td > {{d.InvoiceNo}} </td>
                                                            <td > {{d.CustomerName }} </td>
                                                            <td > {{ d.MobileNo1 }} </td>
