--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -1991,7 +1991,8 @@
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
-                                                <div class="row">
+
+                                                <div class="row" *ngIf="company.PrimeMembership == true">
                                                     <div id="membershipCard" class="col-6"
                                                         style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                         <div class="row pt-2" style="border-radius: 4px;">
@@ -2085,13 +2086,33 @@
 
                                             <div class="col-md-5 col-12">
                                                 <div class="row ">
-                                                    <div class="col-md-12 col-12 p-0">
+                                                    <div class="col-md-7 col-12 p-0">
                                                         <textarea name="Remark" id="" rows="5"
                                                             style=" height: 100%; width:100%">
                                                             {{this.data.Remarks}}
                                                          </textarea>
                                                     </div>
-                                                    <div class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
+
+                                                      <div class="col-md-5 col-12 ms-md-auto">
+                                                <div *ngIf="company.PhotoClick == true" class="row ">
+                                                    <div class="col-10 mt-md-0 ">
+                                                        <img class="fit-picture" width="170" height="100"
+                                                            [src]="customerImage">
+                                                    </div>
+                                                    <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 "
+                                                        (click)="fileInput.click()" style="cursor: pointer;">
+                                                        <i class="fa-solid fa-cloud-arrow-up upload_icon">
+                                                            <span style="font-size: 10px;letter-spacing: 2px;"> Image
+                                                            </span>
+                                                        </i>
+                                                        <input #fileInput id="my-input" name='PhotoURL' type="file"
+                                                            (change)="uploadImage($event, 'User')"
+                                                            style="display:none;">
+                                                    </div>
+                                                </div>
+                                            </div> 
+
+                                                    <div *ngIf="company.PrimeMembership == true" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
                                                     margin: 0px;">
                                                         <div class="table-responsive">
                                                             <table
@@ -2128,24 +2149,7 @@
                                                 </div>
 
                                             </div>
-                                            <!-- <div class="col-md-2 col-12 ms-md-auto">
-                                                <div class="row ">
-                                                    <div class="col-10 mt-md-0 ">
-                                                        <img class="fit-picture" width="170" height="170"
-                                                            [src]="customerImage">
-                                                    </div>
-                                                    <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 "
-                                                        (click)="fileInput.click()" style="cursor: pointer;">
-                                                        <i class="fa-solid fa-cloud-arrow-up upload_icon">
-                                                            <span style="font-size: 10px;letter-spacing: 2px;"> Image
-                                                            </span>
-                                                        </i>
-                                                        <input #fileInput id="my-input" name='PhotoURL' type="file"
-                                                            (change)="uploadImage($event, 'User')"
-                                                            style="display:none;">
-                                                    </div>
-                                                </div>
-                                            </div> -->
+                                           
 
                                         </div>
                                     </div>
@@ -2250,7 +2254,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-2 col-12 ms-md-auto">
-                                                <div class="row ">
+                                                <div *ngIf="company.PhotoClick == true" class="row ">
                                                     <div class="col-10 mt-md-3 ">
                                                         <img class="fit-picture" width="170" height="170"
                                                             [src]="spectacleImage">
@@ -2382,7 +2386,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-2 col-12 ms-md-auto">
-                                                <div class="row ">
+                                                <div *ngIf="company.PhotoClick == true" class="row ">
                                                     <div class="col-10 mt-md-3 ">
                                                         <img class="fit-picture" width="170" height="170"
                                                             [src]="clensImage">
@@ -2780,7 +2784,7 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="row">
+                                                    <div class="row" *ngIf="company.PrimeMembership == true">
                                                         <div id="membershipCard" class="col-6"
                                                             style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                             <div class="row pt-2" style="border-radius: 4px;">
@@ -2874,13 +2878,31 @@
     
                                                 <div class="col-md-5 col-12">
                                                     <div class="row ">
-                                                        <div class="col-md-12 col-12 p-0">
+                                                        <div class="col-md-7 col-12 p-0">
                                                             <textarea name="Remark" id="" rows="5"
                                                                 style=" height: 100%; width:100%">
                                                                 {{this.data.Remarks}}
                                                              </textarea>
                                                         </div>
-                                                        <div class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
+                                                        <div class="col-md-5 col-12 ms-md-auto">
+                                                            <div *ngIf="company.PhotoClick == true" class="row ">
+                                                                <div class="col-10 mt-md-0 ">
+                                                                    <img class="fit-picture" width="170" height="100"
+                                                                        [src]="customerImage">
+                                                                </div>
+                                                                <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 "
+                                                                    (click)="fileInput.click()" style="cursor: pointer;">
+                                                                    <i class="fa-solid fa-cloud-arrow-up upload_icon">
+                                                                        <span style="font-size: 10px;letter-spacing: 2px;"> Image
+                                                                        </span>
+                                                                    </i>
+                                                                    <input #fileInput id="my-input" name='PhotoURL' type="file"
+                                                                        (change)="uploadImage($event, 'User')"
+                                                                        style="display:none;">
+                                                                </div>
+                                                            </div>
+                                                        </div> 
+                                                        <div *ngIf="company.PrimeMembership == true" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
                                                         margin: 0px;">
                                                             <div class="table-responsive">
                                                                 <table
@@ -2917,23 +2939,7 @@
                                                     </div>
     
                                                 </div>
-                                                <!-- <div class="col-md-2 col-12 ms-md-auto">
-                                                    <div class="row ">
-                                                        <div class="col-10 mt-md-0 ">
-                                                            <img class="fit-picture" width="170" height="170"
-                                                                [src]="customerImage">
-                                                        </div>
-                                                        <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 "
-                                                            (click)="fileInput.click()" style="cursor: pointer;">
-                                                            <i class="fa-solid fa-cloud-arrow-up upload_icon">
-                                                                <span style="font-size: 10px;letter-spacing: 2px;"> Image
-                                                                </span>
-                                                            </i>
-                                                            <input #fileInput id="my-input" name='PhotoURL' type="file"
-                                                                (change)="uploadImage($event, 'User')"
-                                                                style="display:none;">
-                                                        </div>
-                                                    </div> -->
+                                                
                                                 </div> 
                                         </div>
                                     </ng-template>
@@ -3272,7 +3278,7 @@
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
-                                                <div class="row">
+                                                <div class="row" *ngIf="company.PrimeMembership == true">
                                                     <div id="membershipCard" class="col-6"
                                                         style="background-image: linear-gradient(2deg, #ffc10731, #ffc10737),url(https://png.pngtree.com/thumb_back/fh260/background/20220428/pngtree-abstract-3d-elegant-golden-ribbon-elements-and-lighting-effect-sparking-glitter-image_1108708.jpg); border-radius: 4px; padding: 4px 15px;background-size: 100%; box-shadow: 0px 0px 3px 0px #7a672d;">
                                                         <div class="row pt-2" style="border-radius: 4px;">
@@ -3366,13 +3372,31 @@
 
                                             <div class="col-md-5 col-12">
                                                 <div class="row ">
-                                                    <div class="col-md-12 col-12 p-0">
+                                                    <div class="col-md-7 col-12 p-0">
                                                         <textarea name="Remark" id="" rows="5"
                                                             style=" height: 100%; width:100%">
                                                             {{this.data.Remarks}}
                                                          </textarea>
                                                     </div>
-                                                    <div class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
+                                                    <div class="col-md-5 col-12 ms-md-auto">
+                                                        <div *ngIf="company.PhotoClick == true" class="row ">
+                                                            <div class="col-10 mt-md-0 ">
+                                                                <img class="fit-picture" width="170" height="100"
+                                                                    [src]="customerImage">
+                                                            </div>
+                                                            <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 "
+                                                                (click)="fileInput.click()" style="cursor: pointer;">
+                                                                <i class="fa-solid fa-cloud-arrow-up upload_icon">
+                                                                    <span style="font-size: 10px;letter-spacing: 2px;"> Image
+                                                                    </span>
+                                                                </i>
+                                                                <input #fileInput id="my-input" name='PhotoURL' type="file"
+                                                                    (change)="uploadImage($event, 'User')"
+                                                                    style="display:none;">
+                                                            </div>
+                                                        </div>
+                                                    </div> 
+                                                    <div *ngIf="company.PrimeMembership == true" class="col-12 pt-1 mt-2" style="height: 150px;overflow: auto; border: 1px solid; padding: 0;
                                                     margin: 0px;">
                                                         <div class="table-responsive">
                                                             <table
@@ -3409,23 +3433,7 @@
                                                 </div>
 
                                             </div>
-                                            <!-- <div class="col-md-2 col-12 ms-md-auto">
-                                                <div class="row ">
-                                                    <div class="col-10 mt-md-0 ">
-                                                        <img class="fit-picture" width="170" height="170"
-                                                            [src]="customerImage">
-                                                    </div>
-                                                    <div class="col-xl-10 col-lg-10 col-md-10 col-11 mb-0 "
-                                                        (click)="fileInput.click()" style="cursor: pointer;">
-                                                        <i class="fa-solid fa-cloud-arrow-up upload_icon">
-                                                            <span style="font-size: 10px;letter-spacing: 2px;"> Image
-                                                            </span>
-                                                        </i>
-                                                        <input #fileInput id="my-input" name='PhotoURL' type="file"
-                                                            (change)="uploadImage($event, 'User')"
-                                                            style="display:none;">
-                                                    </div>
-                                                </div> -->
+                                            
                                             </div> 
 
                                     </div>
